# grassp

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  release-please-config.json  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yaml  conventional-commits.yaml  publish.yml  release-please.yml
docs/: upload_local.sh
docs/source/: conf.py  contributors.md  index.md  installation.md
docs/source/_static/: custom.css
docs/source/api/: datasets.md  io.md  plotting.md  preprocessing.md  tools.md
docs/source/tutorials/: index.md
docs/source/tutorials/notebooks/: DC_tutorial.ipynb  OrgIP_tutorial.ipynb  integration_tutorial.ipynb
grassp/: __init__.py
grassp/datasets/: __init__.py  create_compartment_annotations.ipynb  create_subcellular_annotations.ipynb  example_data.py  metadata.py  uniprot_cc.py
grassp/datasets/marker_curation/: create_subcellular_annotations.ipynb  fetch_external_markers.py  fetch_proloc_markers.R  update_cRAP.py
grassp/io/: __init__.py  read.py
grassp/plotting/: __init__.py  clustering.py  enrichment.py  heatmaps.py  integration.py  qc.py  ternary.py
grassp/preprocessing/: __init__.py  annotation.py  contaminants.py  enrichment.py  imputation.py  simple.py
grassp/tests/: test_annotation.py  test_contaminants.py  test_enrichment.py  test_integration.py  test_io.py  test_plotting_integration.py  test_preprocessing_integration.py  test_tools_integration.py  test_uniprot_cc.py
grassp/tools/: __init__.py  clustering.py  enrichment.py  integration.py  localization.py  scoring.py  tagm.py
orgipy/: __init__.py
orgipy/datasets/: __init__.py  example_data.py
orgipy/io/: read.py
orgipy/plotting/: __init__.py  heatmaps.py  integration.py  qc.py
orgipy/preprocessing/: __init__.py  imputation.py  simple.py
orgipy/tools/: __init__.py  clustering.py  enrichment.py  integration.py  scoring.py
some_package/cli/: some_cli.py
some_package/some_subpackage/: some_module.py
